Refine some puzzles

--- a/2020/2003.ipynb
+++ b/2020/2003.ipynb
@@ -171,19 +171,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(1, 1) 94\n",
-      "(3, 1) 74\n",
-      "(5, 1) 93\n",
-      "(7, 1) 82\n",
-      "(1, 2) 39\n",
-      "product of trees is 1\n"
+      "(1, 1) 66\n",
+      "(3, 1) 153\n",
+      "(5, 1) 79\n",
+      "(7, 1) 92\n",
+      "(1, 2) 33\n",
+      "product of trees is 2421944712\n"
      ]
     }
    ],
@@ -191,11 +191,12 @@
     "def countTrees2(slope,data):\n",
     "    xPos = 0\n",
     "    nTrees = 0\n",
-    "    for yPos in range(slope[1],len(data),slope[1]):\n",
+    "    for lineNum in range(slope[1],len(data),slope[1]):\n",
+    "        line=data[lineNum]\n",
     "        xPos += slope[0]\n",
     "        if xPos >= len(line): # check to see if beyond bound and if so, subtract lenght of line\n",
     "            xPos -= len(line)\n",
-    "        if data[yPos][xPos] == \"#\" : nTrees += 1\n",
+    "        if line[xPos] == \"#\" : nTrees += 1\n",
     "    return nTrees\n",
     "\n",
     "with open ('2003input.txt') as f_in:\n",
@@ -204,8 +205,9 @@
     "product = 1\n",
     "slopes = [(1,1),(3,1),(5,1),(7,1),(1,2)]\n",
     "for slope in slopes:\n",
-    "    print(slope,countTrees2(slope,data))\n",
-    "    #product *= \n",
+    "    trees = countTrees2(slope,data)\n",
+    "    print(slope,trees)\n",
+    "    product *= trees\n",
     "\n",
     "print(f\"product of trees is {product}\")\n"
    ]
