--- a/2023/2302.ipynb
+++ b/2023/2302.ipynb
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -65,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -83,7 +83,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -104,7 +104,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -113,7 +113,7 @@
        "'green'"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -124,7 +124,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -138,10 +138,12 @@
     }
    ],
    "source": [
+    "maxVals = {'red':12,'green':13,'blue':14}\n",
+    "\n",
     "for sample in samples:\n",
     "    drawGroup = sample.split(',')\n",
     "    for draw in drawGroup:\n",
-    "        nCubes = int(re.search(pattern,draw)[0])\n",
+    "        nCubes = int(re.search(findNumbers,draw)[0])\n",
     "        color = re.search(findColors,draw)[0]\n",
     "        if nCubes < maxVals[color]:\n",
     "            impossible = True\n",
@@ -162,7 +164,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -193,6 +195,7 @@
     "                return False\n",
     "    return True\n",
     "\n",
+    "maxVals = {'red':12,'green':13,'blue':14}\n",
     "tally = 0\n",
     "\n",
     "for line in testData.split('\\n'):\n",
@@ -217,7 +220,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -408,7 +411,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.13"
+   "version": "3.12.2"
   }
  },
  "nbformat": 4,
