--- a/2023/2306.ipynb
+++ b/2023/2306.ipynb
@@ -12,11 +12,9 @@
     "* 2 ms --> 2mm/ms\n",
     "* 3 ms --> 3mm/ms\n",
     "\n",
-    "Time pushing button counts towards race time. So goal is to maximize total distance:\n",
+    "Time pushing button counts towards race time. So calculate the distance for the time a button is pushed:\n",
     "\n",
     "$d = (TotalTime - tPush) * tPush$\n",
-    "\n",
-    "$d = TotalTime * tPush - tPush^2$\n",
     "\n",
     "For each race, there are multiple push times that can win. For each, figure out the number of possible winning numbers.\n",
     "\n",
@@ -40,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -49,7 +47,7 @@
        "[(7, 9), (15, 40), (30, 200)]"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -68,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -89,7 +87,7 @@
     "    tTot = race[0] # time\n",
     "    goal = race[1] # dist\n",
     "    for tPush in range(tTot): # try all time values\n",
-    "        if tTot * tPush - tPush**2 > goal:\n",
+    "        if (tTot - tPush) * tPush > goal:\n",
     "            nWins += 1\n",
     "    print(race,nWins)\n",
     "    product *= nWins\n",
@@ -105,7 +103,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -138,7 +136,7 @@
     "    tTot = race[0] # time\n",
     "    goal = race[1] # dist\n",
     "    for tPush in range(tTot):\n",
-    "        if tTot * tPush - tPush**2 > goal:\n",
+    "        if (tTot - tPush) * tPush > goal:\n",
     "            nWins += 1\n",
     "    print(race,nWins)\n",
     "    product *= nWins\n",
@@ -178,7 +176,7 @@
     "    tTot = race[0] # time\n",
     "    goal = race[1] # dist\n",
     "    for tPush in range(tTot):\n",
-    "        if tTot * tPush - tPush**2 > goal:\n",
+    "        if (tTot - tPush) * tPush > goal:\n",
     "            nWins += 1\n",
     "    print(race,nWins)\n",
     "    product *= nWins\n",
@@ -273,7 +271,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.13"
+   "version": "3.12.2"
   }
  },
  "nbformat": 4,
