--- a/2023/2308.ipynb
+++ b/2023/2308.ipynb
@@ -397,6 +397,25 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "n = 10\n",
+    "n /= 5\n",
+    "print(n)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 73,
    "metadata": {},
    "outputs": [
@@ -473,7 +492,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.5"
+   "version": "3.10.13"
   }
  },
  "nbformat": 4,
